# ffmpeg-build

./: .gitignore  CMakeLists.txt  README.md  build.sh  linux-aarch64.cmake  sleet.json  videoplayer.cpp  videoplayer.def  videoplayer.h  videoplayer_c.cpp
.github/workflows/: ffmpeg.yml  main.yml
Interop/: AudioSamples.cs  Interop.csproj  VideoFrame.cs  VideoPlayer.cs
managed/Interop/: Interop.csproj  Interop.sln  VideoPlayer.cs  localbuild.cmd
